WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91051
[Qt][Mac]REGRESSION(
r122400
): It broke the build
https://bugs.webkit.org/show_bug.cgi?id=91051
Summary
[Qt][Mac]REGRESSION(r122400): It broke the build
Csaba Osztrogonác
Reported
2012-07-11 22:48:38 PDT
We got the following errors on Snow Leopard and Lion after
r122400
: /Users/INdT/Development/build-slaves/indt-snowleopard/qt-snowleopard-release/build/Source/WebCore/platform/mac/DisplaySleepDisabler.cpp: In member function ‘void WebCore::DisplaySleepDisabler::systemActivityTimerFired(WebCore::Timer<WebCore::DisplaySleepDisabler>*)’: /Users/INdT/Development/build-slaves/indt-snowleopard/qt-snowleopard-release/build/Source/WebCore/platform/mac/DisplaySleepDisabler.cpp:64: error: ‘OverallAct’ was not declared in this scope /Users/INdT/Development/build-slaves/indt-snowleopard/qt-snowleopard-release/build/Source/WebCore/platform/mac/DisplaySleepDisabler.cpp:64: error: ‘UpdateSystemActivity’ was not declared in this scope /buildbot/lion-qt-release/lion-qt-intel-release/build/Source/WebCore/platform/mac/DisplaySleepDisabler.cpp: In member function ‘void WebCore::DisplaySleepDisabler::systemActivityTimerFired(WebCore::Timer<WebCore::DisplaySleepDisabler>*)’: /buildbot/lion-qt-release/lion-qt-intel-release/build/Source/WebCore/platform/mac/DisplaySleepDisabler.cpp:64: error: ‘OverallAct’ was not declared in this scope /buildbot/lion-qt-release/lion-qt-intel-release/build/Source/WebCore/platform/mac/DisplaySleepDisabler.cpp:64: error: ‘UpdateSystemActivity’ was not declared in this scope
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2012-07-11 23:01:04 PDT
Sorry for the breakage. I watched the bots for an hour or so after landing, but it looks like this one took longer than that to finish building.
Csaba Osztrogonác
Comment 2
2012-07-11 23:07:22 PDT
(In reply to
comment #1
)
> Sorry for the breakage. I watched the bots for an hour or so after landing, but it looks like this one took longer than that to finish building.
Not problem, thanks for looking into it. I willingly helped you, but unfortunately I don't have Mac box with Qt build to be able to debug.
Mark Rowe (bdash)
Comment 3
2012-07-11 23:08:22 PDT
The Snow Leopard Qt bot appears to be building against the system headers (e.g., no SDK) with a deployment target of 10.5. This means that __MAC_OS_X_VERSION_MIN_REQUIRED will evaluate to 1050 and __MAC_OS_X_VERSION_MAX_ALLOWED will evaluate to 1060. This means that in theory the Leopard-compatible path in DisplaySleepEnabler.cpp should be used. Prior to my change it looks like Qt would have been using the Snow Leopard and newer version of the code because Qt happened to not define BUILDING_ON_LEOPARD. That would result in code that was incompatible with the 10.5 deployment target though.
Mark Rowe (bdash)
Comment 4
2012-07-11 23:18:33 PDT
This should be fixed in
r122421
.
Alexis Menard (darktears)
Comment 5
2012-07-12 07:10:46 PDT
(In reply to
comment #4
)
> This should be fixed in
r122421
.
Yes indeed it is slow as the bot runs on an old Macbook Pro 2,2 and Xcode 4.3 removed the distributed build feature which was working fine for us. Anyway I confirm it is fixed. Thank you.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug